--- a/src/app/styles/hero.module.css
+++ b/src/app/styles/hero.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   text-align: center;
   height: 80vh;
-  background: linear-gradient(135deg, #4facfe, #00f2fe);
+  background-color: black;
   color: white;
   padding: 20px;
 }
@@ -14,7 +14,9 @@
   font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 20px;
-  animation: fadeInDown 1s ease-in-out;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: typing 2.5s steps(60, end), 0.5s step-end infinite;
 }
 
 .heroSubtext {
@@ -25,31 +27,27 @@
 
 .heroButton {
   background-color: #ffffff;
-  color: #00aaff;
+  color: black;
   border: none;
   padding: 12px 24px;
   font-size: 1rem;
-  font-weight: bold;
-  border-radius: 5px;
+  border-radius: 20px;
   cursor: pointer;
-  animation: bounce 2s infinite;
   transition: transform 0.3s;
 }
 
 .heroButton:hover {
   transform: scale(1.1);
-  background-color: #00f2fe;
-  color: #ffffff;
+  background-color: #3cc1e4;
+  color: white;
 }
 
-@keyframes fadeInDown {
+@keyframes typing {
   from {
-    opacity: 0;
-    transform: translateY(-50px);
+    width: 0;
   }
   to {
-    opacity: 1;
-    transform: translateY(0);
+    width: 100%;
   }
 }
 
@@ -59,15 +57,5 @@
   }
   to {
     opacity: 1;
-  }
-}
-
-@keyframes bounce {
-  0%,
-  100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-10px);
   }
 }
