--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   text-align: center;
   padding: 2rem 1rem;
-  background-color: black;
-  color: white;
+  background-color: #f6f6f6;
+  color: #000;
   font-weight: 900;
 }
