--- a/src/app/styles/hero.module.css
+++ b/src/app/styles/hero.module.css
@@ -1,12 +1,29 @@
 .hero {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  text-align: center;
   height: 80vh;
-  background-color: black;
-  color: white;
+  padding: 20px;
+  background-color: #f6f6f6;
+  color: #333;
+}
+
+.heroImage {
+  flex: 1;
+  max-width: 50%;
+  margin-right: 10px;
+}
+
+.heroImage img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.heroContent {
+  flex: 1;
+  text-align: center;
   padding: 20px;
 }
 
@@ -26,20 +43,20 @@
 }
 
 .heroButton {
-  background-color: #ffffff;
-  color: black;
+  background-color: #000;
+  color: #fff;
   border: none;
-  padding: 12px 24px;
+  padding: 24px 48px;
   font-size: 1rem;
-  border-radius: 20px;
+  border-radius: 8px;
   cursor: pointer;
   transition: transform 0.3s;
 }
 
 .heroButton:hover {
   transform: scale(1.1);
-  background-color: #3cc1e4;
-  color: white;
+  background-color: #333;
+  color: #fff;
 }
 
 @keyframes typing {
