--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -1,17 +1,21 @@
 .navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  background-color: black;
+  background-color: #fff;
+}
+
+.logoContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .logo a {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: black;
   text-decoration: none;
-  transition: color 0.3s ease;
 }
 
 .navLinks {
@@ -25,9 +29,9 @@
 .navLinks li a {
   font-size: 1rem;
   text-decoration: none;
-  color: white;
+  color: #333;
   transition: color 0.3s ease;
-  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .navLinks li a:hover {
@@ -37,7 +41,7 @@
 .icon {
   margin-right: 8px;
   vertical-align: middle;
-  color: white;
+  color: #333;
   font-size: 1.2rem;
 }
 
