--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,3 +1,30 @@
 * {
   font-family: "Inter", sans-serif;
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content {
+  flex: 1;
+}
+
+footer {
+  text-align: center;
+  padding: 2rem 1rem;
+  background-color: #f6f6f6;
+  color: #000;
+  font-weight: 900;
+}
