--- a/src/app/styles/login.module.css
+++ b/src/app/styles/login.module.css
@@ -1,14 +1,8 @@
 .login {
   padding: 2rem;
-  background-color: #f9f9f9;
   color: #333;
   text-align: center;
-}
-
-.login h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
-  color: #0073e6;
+  background-color: #fff;
 }
 
 .login form {
@@ -20,29 +14,32 @@
 .login label {
   font-size: 1.2rem;
   margin-bottom: 1rem;
+  color: #333;
 }
 
 .login input {
   margin-top: 0.5rem;
   padding: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 1px solid #f9f9f9;
+  border-radius: 8px;
   width: 100%;
   max-width: 300px;
+  background-color: #000;
+  color: #fff;
 }
 
 .login button {
   margin-top: 1rem;
   padding: 0.5rem 2rem;
   font-size: 1rem;
-  color: white;
-  background-color: #0073e6;
+  color: #fff;
+  background-color: #000;
   border: none;
-  border-radius: 5px;
+  border-radius: 8px;
   cursor: pointer;
 }
 
 .login button:hover {
-  background-color: #005bb5;
+  background-color: #333;
 }
